<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="com.shinystar91.ZECMaker.CheckBalanceActivity">

    <TextView
        android:id="@+id/BigPrint"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:gravity="center_horizontal"
        android:text="@string/Balance"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />


    <TextView
        android:id="@+id/TextBalance"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/buttonshape3"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:paddingTop="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BigPrint" />

    <TextView
        android:id="@+id/BalanceInOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/Other_Text"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal"
        android:typeface="sans"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextBalance" />

    <Button
        android:id="@+id/KnowBtn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttonshape"
        android:onClick="TodayRate"
        android:text="@string/Convert_Btn"
        android:textColor="@color/white"
        android:typeface="sans"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BalanceInOther" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/AdBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/adUnitId"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

</android.support.constraint.ConstraintLayout>
