<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="com.shinystar91.ZECMaker.ShareActivity">


 <TextView
     android:id="@+id/MegaText"
     android:layout_width="340dp"
     android:layout_height="174dp"
     android:layout_marginTop="56dp"
     android:gravity="center"
     android:lineSpacingMultiplier="1.2"
     android:text="@string/DescriptionTextShare"
     android:textAlignment="gravity"
     android:textAllCaps="false"
     android:textColor="@color/colorPrimaryDark"
     android:textSize="17sp"
     android:textStyle="bold"
     android:typeface="sans"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 <!--app:layout_constraintEnd_toEndOf="@id/Back"
        app:layout_constraintTop_toBottomOf="@id/Back"-->


 <Button
     android:id="@+id/SendPromo"
     android:layout_width="200dp"
     android:layout_height="40dp"
     android:layout_marginTop="48dp"
     android:background="@drawable/buttonshape4"
     android:onClick="SendMyPromo"
     android:text="@string/SendPromo"
     android:textColor="#FFF"
     android:textSize="14sp"
     android:typeface="sans"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toBottomOf="@id/MegaText" />

 <TextView
     android:id="@+id/YourPromo"
     android:layout_width="350dp"
     android:layout_height="40dp"
     android:layout_marginTop="48dp"
     android:background="@drawable/buttonshape3"
     android:gravity="center"
     android:paddingRight="5dp"
     android:textAlignment="gravity"
     android:textColor="@color/red_light"
     android:textSize="17sp"
     android:textStyle="bold"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toBottomOf="@id/SendPromo" />

 <TextView
     android:id="@+id/ActivatedApp"
     android:layout_width="350dp"
     android:layout_height="40dp"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
     android:background="@drawable/buttonshape3"
     android:gravity="center"
     android:textAlignment="inherit"
     android:textColor="@color/red_light"
     android:textSize="17sp"
     android:textStyle="bold"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/YourPromo" />

 <TextView
     android:id="@+id/Coeff"
     android:layout_width="350dp"
     android:layout_height="40dp"
     android:layout_marginTop="8dp"
     android:background="@drawable/buttonshape3"
     android:gravity="center"
     android:paddingRight="5dp"
     android:textAlignment="gravity"
     android:textColor="@color/red_light"
     android:textSize="17sp"
     android:textStyle="bold"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toBottomOf="@id/ActivatedApp" />

 <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/AdShare"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     ads:adSize="SMART_BANNER"
     ads:adUnitId="@string/adUnitId"
     ads:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintBottom_toTopOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
